# 296-densenet-trading

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
rust_densenet_trading/: Cargo.toml
rust_densenet_trading/src/: lib.rs
rust_densenet_trading/src/densenet/: block.rs  config.rs  layer.rs  mod.rs  network.rs  transition.rs
rust_densenet_trading/src/features/: extractor.rs  indicators.rs  mod.rs  normalizer.rs
rust_densenet_trading/src/trading/: backtester.rs  metrics.rs  mod.rs  position.rs  risk.rs  signal.rs
rust_densenet_trading/src/utils/: io.rs  math.rs  mod.rs  time.rs
